# system_programing

L10_heap_behind/: allocate_size  allocate_size.c  brk  brk.c  heapflow  heapflow.c  heapflow1  hellobug  hellobug.c
L11_UNIX_more/: count  count.c  frd.txt  more0  more0.c  more1  more1.c  more2  more2.c  more3  more3.c  more4  more4.c  more5.c  scfrnd.txt  tcc.c
L13_UNIX_FILE_MANAG/: access1  access1.c  dup  dup.c  lseek1  lseek1.c  no_dup  no_dup.c  stdinredir1  stdinredir1.c  stdinredir2  stdinredir2.c  stdinredir3  stdinredir3.c  test
L14_Design_code_ls/: fileinfo  fileinfo.c  lsv0  lsv0.c  lsv1  lsv1.c  lsv2  lsv2.c  myreaddir  myreaddir.c
L15_Design_code_who/: who0  who0.c  who1  who1.c  who2  who2.c
L16_Programing_terminal_devices/: C_Read.c  C_write.c  c_read  c_write  my_frnd  pass_simple  pass_simple.c  pass_tc.c  tc_pass
L18_process_man2/: orphen  orphen.c  vfork  vfork.c  vfork1  vfork1.c  vfork2  vfork2.c  wait1  wait1.c  wait2  wait2.c  zombie  zombie.c
L1_compil_syscall/: a.out  dynamicexe  hello.c  hello.i  hello.s  syscall  syscall.i  syscll.c  syscll.s
L3_W_o_Linker/swap/: main.c  myexe  swap.c
L4_UNIX_MAKE/ex1/: hello  hello.c  makefile
L4_UNIX_MAKE/ex2/: makefile  mydiv.c
L4_UNIX_MAKE/ex3/: makefile  myexe
L4_UNIX_MAKE/ex4/: makefile  myadd.c  mymul.c  mysub.c  pog1.c
L4_UNIX_MAKE/ex5/: makefile  myexe
L5_autotool_cmake/cmaketool/exe2/: CMakeLists.txt
L8_Exit_Handler/: myexe  prog1.c
L8_Exit_Handler/ex1/: _exit1  atex  atex.c  limitgetset  limitgetset.c  multi_atexit  multi_atexit.c  on_exit_exa  on_exit_exa.c
(+65 files in other folders)
